--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
   /* Set the fixed height of the footer here */
   height: 80px;
   text-align: center;
-  margin-top: 20px;
+/*   margin-top: 20px; */
   padding: 20px 0 20px 0;
 }
 header {
