--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body {
   height: 80px;
   text-align: center;
 /*   margin-top: 20px; */
-  padding: 20px 0 20px 0;
+/*   padding: 20px 0 20px 0; */
 }
 header {
   background-color: rgb(2, 27, 54);
